# Riko4

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .travis.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  RIKO4.sln  Riko4.sln  _config.yml  changelog.md  default.nix  emscripten.md  index.md  prejs.js  vcpkg-configuration.json  vcpkg.json
RIKO4/: AudioLib.cpp  GPULib.cpp  ImageLib.cpp  RIKO4.vcxproj  RIKO4.vcxproj.filters  resource.h  riko.cpp  rikoAudio.h  rikoGPU.h  rikoImage.h  shader.cpp  simpleFragmentShader.glsl  simpleVertexShader.glsl
Riko4/: AudioLib.cpp  GPULib.cpp  ImageLib.cpp  RIKO4.rc  Riko4.vcxproj  Riko4.vcxproj.filters  lfs.c  riko.cpp  rikoAudio.h  rikoImage.h
_includes/: head.html  header.html  sidebar.html
_layouts/: default.html  doc.html  doclist.html
_pages/gpu/: blitPalette.md  drawPixel.md  index.html  setPaletteColor.md
_pages/gpu/blitPalette/: index.md
_sass/: minima.scss
_sass/minima/: _base.scss  _layout.scss  _syntax-highlighting.scss
cmake/modules/: FindCURLpp.cmake  FindLuaJIT.cmake  FindSDL2.cmake  FindSDL2_gpu.cmake
data/shaders/: common.frag  common.vert
includes/common/: shader.cpp  shader.hpp
libs/LFS/: lfs.c
libs/LuaJIT/: lua51.exp  lua51.lib
libs/SDL2/: SDL2.lib  SDL2_gpu.exp  SDL2_gpu.lib  SDL2_gpu_s.lib  SDL2main.lib
libs/curl/: curlpp.lib  libcurl-d_imp.lib  libcurl_imp.lib
libs/curl/msvc/: curlpp.exp  curlpp.lib
libs/include/: SDL_opengl.h  SDL_platform.h
libs/include/LFS/: lfs.h
libs/include/LuaBridge/: luabridge.h
libs/include/LuaJIT/: lauxlib.h  lj_bcdef.h  lj_folddef.h  lua.h  luaconf.h  luajit.h  lualib.h
libs/include/SDL2/: SDL_config.h  SDL_hints.h  SDL_system.h
libs/include/SDL2/docs/: README-android.md  README-directfb.md  README-hg.md  README-ios.md  README-macosx.md  README-porting.md  README-touch.md
libs/include/SDL_gpu/: SDL_gpu.h  SDL_gpu_GLES_1.h  SDL_gpu_GLES_2.h  SDL_gpu_OpenGL_1.h  SDL_gpu_OpenGL_1_BASE.h  SDL_gpu_OpenGL_2.h  SDL_gpu_OpenGL_3.h  SDL_gpu_RendererImpl.h
scripts/: adaptIO.lua  boot.lua  coreFont  font.lua  hello.lua  shell.lua  shellcfg.lua  smol.rff
scripts/home/: aud.lua  bloc.rif  bloc2.rif  bloc3.rif  btex.rif  cur.rif  dither.lua  ditherold.lua  eball.lua  edit.lua  fbtex.rif  gc.lua  hi.rif  imt.lua  ink.lua  knockout.lua  logo.rif  ls.lua  ltest.lua  lua.lua  map.lua  map.rif  melon.rif  noise.lua  noiseImage.lua  pac.lua  pactex.rif  paint.lua  pc.rif  plat.lua  pwd.lua  snake.lua  sudoku.lua  test.lua  tex.rif  three.lua  ts.lua  unt.lua  wave.lua  wg.lua
scripts/home/demos/: 3d.lua  aud.lua  circ.lua  clip.rlua  curs.rif  event.lua  eye.rlua  ghost.lua  ghost.rif  grav.lua  hello.rlua  logo.rif  ltest.lua  part.lua  part.rif  r4l.rif  raycast.rlua  sau.rlua  seq.lua  shaderdemo.lua  spd.lua  target.rif  uitest.lua  wave.lua
scripts/home/demos/dither/: astc.bmp.rif  dither.lua  land.bmp.rif  tucan.bmp.rif
scripts/home/demos/maps/: jam.rif  jam.tmx  jam.tsx  rules.txt  ruleset.tmx  test.lua  test.rlua  walltops.tmx
scripts/home/demos/sim/lib/: class.lua  vector.lua
scripts/home/demos/sim/oneoffs/: line.lua
scripts/home/games/: 2048.rlua  eball.lua  isola.lua  knockout.lua  snake.lua  sudoku.lua  tex.rif
scripts/home/games/blit8/: blit8.lua
scripts/home/games/mine/: flag.rif  mine.lua  mine.rif  mineBloc.rif
scripts/home/games/tetris/: cleardata.lua  kicksets.lua  main.rlua  minos.lua
scripts/home/pac/: main.lua
scripts/home/sim/fluid/: main.rlua
scripts/home/sim/lib/: vector.lua
scripts/home/sim/solo/: explode.lua  line.lua  rope.rlua
scripts/lib/: bitmap.lua  class.lua  complex.lua  context.lua  extras.lua  getopt.lua  gpp.lua  header.lua  loops.lua  luascore.lua  map.lua  mediator.lua  rif.lua  t3d.lua  ui.lua  xml.lua
scripts/lib/ui/: button.lua  cursor.lua  window.lua
scripts/usr/shell/: _ext_lua.lua  _ext_rlua.lua
src/: AudioLib.cpp  GPULib.cpp  ImageLib.cpp  Riko4.vcxproj  Riko4.vcxproj.filters  fsLib.cpp  luaIncludes.h  resource.h  riko.cpp  riko.h  rikoAudio.h  rikoConsts.h  rikoFs.h  rikoGPU.h  rikoImage.h  shader.cpp  shader.h
src/core/: events.cpp  events.h  luaMachine.cpp  luaMachine.h  process.cpp  rikoProcess.cpp  rikoProcess.h  shader.cpp  shader.h
src/engine/: audio.cpp  audio.h  audioLib.cpp  fs.cpp  fs.h  fsLib.cpp  gpu.cpp  gpu.h  gpuLib.cpp  image.cpp  image.h  imageLib.cpp  luagpu_bridge.cpp  luagpu_bridge.h  luagpu_types.h  net.cpp  net.h  poly.cpp  poly.h  timer.cpp  timer.h
src/engine/userdata/: ChunkData.cpp  ChunkData.h  ProgressObject.h  ResponseHandle.cpp  ResponseHandle.h  sequence.cpp  sequence.h
src/include/: audio.h  consts.h  events.h  fs.h  gpu.h  image.h  luaIncludes.h  luaMachine.h  net.h  process.h  riko.h  rikoAudio.h  rikoEvents.h  rikoFs.h  rikoGPU.h  rikoImage.h  shader.h
src/misc/: consts.h  luaIncludes.h
src/resources/: icon.icns  icon.rc  icon.res
src/util/: LuaError.h  TableInterface.cpp  TableInterface.h  Xdirent.cpp
vcpkg-overlay/ports/sdl-gpu/: add-exports.patch  fix-const.patch  portfile.cmake  usage  vcpkg.json
